--- a/src/app/pages/wishlist-properties/wishlist-properties.html
+++ b/src/app/pages/wishlist-properties/wishlist-properties.html
@@ -14,7 +14,7 @@
         />
       </svg>
     </button>
-    <h2 class="mb-0 fs-4 text-black">{{ wishlistName }}</h2>
+    <h2 class="mb-0 fs-4">{{ wishlistName }}</h2>
   </div>
   <!-- Loading shimmer -->
   <div class="row" *ngIf="isLoading">
