--- a/src/app/pages/wishlist/wishlist.css
+++ b/src/app/pages/wishlist/wishlist.css
@@ -12,7 +12,7 @@
 .title {
   font-size: 32px;
   font-weight: 600;
-  color: #222222;
+  color: var(--primary-text-color);
   margin: 0;
   letter-spacing: -0.5px;
 }
@@ -203,7 +203,7 @@
 .wishlist-name {
   font-size: 18px;
   font-weight: 600;
-  color: #222222;
+  color: var(--secondary-text-color);
   margin: 0 0 4px 0;
   line-height: 1.3;
   overflow: hidden;
