--- a/src/app/components/mainswiper/mainswiper.html
+++ b/src/app/components/mainswiper/mainswiper.html
@@ -2,7 +2,7 @@
   <!-- Header -->
   <div class="header mt-3">
     <h2 class="title">{{ title }}</h2>
-    <div class="navigation-arrows">
+    <div class="navigation-arrows" dir="ltr">
       <button
         class="nav-btn prev-btn"
         (click)="slidePrev()"
