--- a/src/app/components/messages-box/messages-box.css
+++ b/src/app/components/messages-box/messages-box.css
@@ -3,7 +3,7 @@
   padding: 20px;
   background-color: var(--background);
   height: 87vh;
-  border-left: 0px;
+  /* border-left: 0px; */
   display: flex;
   flex-direction: column;
 }
