--- a/src/app/pages/filtered-properties/filtered-properties.html
+++ b/src/app/pages/filtered-properties/filtered-properties.html
@@ -35,7 +35,7 @@
         </app-slider-card>
       </div>
     </div>
-    <div class="pagination-container" *ngIf="totalPages > 1">
+    <div class="pagination-container" *ngIf="totalPages > 1" dir="ltr">
       <nav class="pagination">
         <button
           class="pagination-btn"
