--- a/src/app/pages/messages/messages.html
+++ b/src/app/pages/messages/messages.html
@@ -3,6 +3,8 @@
     <div class="col-md-3 p-0">
       <app-messages-box
         (chatSessionSelected)="onChatSessionSelected($event)"
+        (langChange)="onLangChange()"
+
       ></app-messages-box>
     </div>
 
