--- a/src/app/layout/listing-wizard-layout/listing-wizard-layout.html
+++ b/src/app/layout/listing-wizard-layout/listing-wizard-layout.html
@@ -15,7 +15,7 @@
       </a>
       <div class="header-actions">
         <button class="header-button">Questions?</button>
-        <button (click)="onSaveExit.emit()" class="header-button">
+        <button (click)="saveAndExit()" class="header-button">
           Save & exit
         </button>
       </div>
